# Village_game

./: BuildingType.h  CMakeLists.txt  Events.cpp  Events.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  Menu.cpp  Menu.h  ResourceManager.cpp  ResourceManager.h  Resources.cpp  Resources.h  UI.cpp  UI.h  UIElement.cpp  UIElement.h  main.cpp  mathFunctions.h
